--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,15 +1,27 @@
-#main {
+.main {
   display: flex;
   gap: 10px;
 }
 
-#main > div {
+.main > div {
   border: 1px solid black;
   border-radius: 10px;
   background-color: lightskyblue;
   padding: 5px;
   flex-basis: 30%;
   min-height: 100px;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+
+.navButtons {
+  background-color: rgb(0, 234, 0);
+  padding:  5px;
 }
 
 div > div > div {
@@ -87,3 +99,26 @@ p {
   transform: translate(-50%, -50%);
 }
 
+.hide {
+  display: none;
+}
+
+#myOrders {
+  position: static;
+  top: 0;
+  left: 0;
+  transform: translate(0, 0);
+  border: 2px solid darkblue;
+  gap: 10px;
+  padding: 10px;
+}
+
+.orders {
+  border-radius: 5px;
+  border: 2px solid tomato;
+}
+
+.order {
+  border-radius: 5px;
+  border: 2px solid tomato;
+}
